<resources>
    <string name="app_name">ToDoApp</string>
    <string name="add">Add</string>
    <string name="add_button">Add Button</string>
    <string name="add_item">Add a new item...</string>
    <string name="edit_item_text">Edit Item Below:</string>
    <string name="save">Save</string>
</resources>
